<resources>
    <string name="app_name">StudyRealtorApp</string>
    <string name="server_error">Unexpected server error</string>
    <string name="timeout_error">Timeout</string>
    <string name="interrupt_error">Interrupt</string>
    <string name="wrong_token_error">Wrong token</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="bm_for_sale">For Sale</string>
    <string name="bm_for_rent">For Rent</string>
    <string name="bm_agents">Agents</string>
    <string name="search_field_hint">search</string>
    <string name="popular_places_title">Top 3 popular places</string>
    <string name="layout_search_favorite_list_title">Suggested</string>
    <string name="view_range_from">From</string>
    <string name="view_range_to">To</string>
    <string name="view_filter_title_beds">Beds</string>
    <string name="view_filter_title_prices">Prices</string>
    <string name="view_filter_title_square">Square</string>
    <string name="view_filter_title_baths">Baths</string>
    <string name="btn_filter_title">Find</string>
    <string name="title_ups">Oops</string>
    <string name="description_error">something went wrong\nWe are trying to fix it\nCheck for updates!</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>

    <string name="item_filter_price_max">Max %d</string>
    <string name="item_filter_beds_min">Beds (%d min)</string>
    <string name="item_filter_more_count">(+%d filters)</string>
    <string name="item_filter_objects_count">(+%d objects)</string>

    <string name="view_sale_property_description_price">AMV: $%d</string>
    <string name="view_sale_property_description_beds">Beds: %d</string>
    <string name="view_sale_property_description_bed">Bed: %d</string>
    <string name="view_sale_property_description_baths">Baths: %d</string>
    <string name="view_sale_property_description_bath">Bath: %d</string>

    <string name="screen_property_details_description_title">Property Description</string>
    <string name="screen_property_details_description_type">Type: %s</string>
    <string name="screen_property_details_description_last_time_update">Last Update Time: %s</string>

    <string name="screen_sale_property_details_description_beds">Has %d beds</string>
    <string name="screen_sale_property_details_description_bed">Has %d bed</string>

    <string name="screen_dashboard_welcome_title">Welcome user!</string>
    <string name="screen_dashboard_welcome_user">Welcome %s!</string>
    <string name="screen_dashboard_description_title">Find Your\nPerfect Home</string>
    <string name="screen_dashboard_btn_buy_title">Buy</string>
    <string name="screen_dashboard_btn_rent_title">Rent</string>
    <string name="screen_dashboard_recent_sale_requests">Recent Sale Searches</string>
    <string name="screen_dashboard_recent_rent_requests">Recent Rent Searches</string>

    <string name="layout_filters_house_type_title">House Type</string>
    <string name="layout_filters_filter_price_title">Price: </string>
    <string name="layout_filters_filter_beds_title">Beds: </string>
    <string name="layout_filters_filter_baths_title">Baths: </string>
    <string name="layout_filters_filter_sqft_title">Sqft: </string>

    <string name="layout_agent_filters_house_type_title">House Type</string>
    <string name="layout_agent_filters_filter_price_title">Price: </string>
    <string name="layout_agent_filters_filter_name_title">Agent Name: </string>
    <string name="layout_agent_filters_filter_rating_title">Rating: </string>
    <string name="layout_agent_filters_filter_hint_name">Agent name</string>
    <string name="layout_agent_filters_filter_hint_location">Location</string>
    <string name="layout_agent_filters_filter_hint_language">Language</string>

    <string name="layout_filters_filter_result_money">$%1d to $%2d</string>
    <string name="layout_filters_filter_result_money_any">Any</string>
    <string name="layout_filters_filter_result_money_min">$%d min</string>
    <string name="layout_filters_filter_result_money_max">$%d max</string>

    <string name="layout_filters_filter_result">%1d to %2d</string>
    <string name="layout_filters_filter_result_any">Any</string>
    <string name="layout_filters_filter_result_min">%d min</string>
    <string name="layout_filters_filter_result_max">%d max</string>

    <string name="screen_agent_home_page_title">Lets Find Your\nFavorite Agent</string>
    <string name="screen_agent_home_page_user_title">Are You looking for Agents?</string>

    <string name="tools_text"> "id": "0735718341"\n
          "name": "Josiah Quincy Elementary School"\n
          "distance_in_miles": 0.7\n
          "education_levels": ["elementary"]\n
          "funding_type": "public"\n
          "grades": ["K", "1", "2", "3", "4", "5"]\n
          "student_count": 742]\n
          "student_teacher_ratio": 12.3\n
          "parent_rating": 4\n
          "rating": 6\n
          "review_count": 9\n
          "slug": "Josiah-Quincy-Elementary-School-0735718341"\n
          "slug_id": "Josiah-Quincy-Elementary-School-0735718341"</string>

    <string name="screen_agent_home_page_empty_title">Looks like your list of favorite agents is empty :(\nTry to make another search</string>
    <string name="screen_agent_details_license_title">License:</string>
    <string name="screen_agent_details_tax_number_title">Tax Number:</string>
    <string name="screen_agent_details_email_title">Email ID:</string>
    <string name="screen_agent_details_phone_title">Phone number:</string>
    <string name="screen_agent_details_about_agent_title">About</string>
    <string name="screen_agent_details_about_broker_info">Broker in %s</string>
    <string name="screen_agent_details_about_broker_info_url">Website: %s</string>
    <string name="screen_agent_details_about_languages_title">Languages:</string>
    <string name="screen_agent_details_about_price_last_time_update">Price range (last update %s)</string>
    <string name="screen_agent_details_about_price_range">$%1s-$%2s</string>

    <string name="action_edit">Edit profile</string>
    <string name="action_delete_data">Remove Data</string>
    <string name="action_delete_profile">Remove Profile</string>

    <string name="screen_edit_profile_toolbar_title">Edit Profile</string>
    <string name="screen_edit_profile_parameter_name_title">Name</string>
    <string name="screen_edit_profile_parameter_lastname_title">Lastname</string>
    <string name="screen_edit_profile_parameter_email_title">Email</string>
    <string name="screen_edit_profile_parameter_phone_title">Phone</string>
    <string name="screen_edit_profile_btn_update_title">Update Profile</string>

    <string name="tab_agent_favorites">Favorites</string>
    <string name="tab_agent_name">Name</string>
    <string name="tab_agent_Price">Price</string>
    <string name="tab_agent_rating">Rating</string>
    <string name="error_empty_location">You must put a location to search!</string>
    <string name="fragment_dashboard_empty_requests">Oops, looks like You haven`t made any property requests yet\ntry to find something that suits you well</string>
    <string name="properties">properties</string>
    <string name="agents">agents</string>
    <string name="profile">profile</string>

</resources>