<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:background="@drawable/bg_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.nikitosii.studyrealtorapp.util.view.RealtorToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endBtnVisible="false"
            app:firstBtnVisible="true"
            app:layout_constraintTop_toTopOf="parent"
            app:toolbar_title="@string/screen_edit_profile_toolbar_title" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cvProfilePhoto"
            android:layout_width="@dimen/size_160dp"
            android:layout_height="@dimen/size_160dp"
            android:transitionName="profile.image"
            app:cardCornerRadius="@dimen/size_80dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/ivProfile"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_user_profile" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvChangePhoto"
            android:layout_width="@dimen/size_40dp"
            android:layout_height="@dimen/size_0dp"
            app:cardBackgroundColor="@color/peach_light"
            app:cardCornerRadius="@dimen/size_30dp"
            app:layout_constraintBottom_toBottomOf="@id/cvProfilePhoto"
            app:layout_constraintDimensionRatio="H,1:1"
            app:layout_constraintEnd_toEndOf="@id/cvProfilePhoto">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerInside"
                android:src="@drawable/ic_edit_photo" />
        </androidx.cardview.widget.CardView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/size_20dp"
            android:layout_marginTop="@dimen/size_20dp"
            android:background="@drawable/bg_content_almost_transparent_corners_20dp"
            android:paddingHorizontal="@dimen/size_20dp"
            android:paddingVertical="@dimen/size_10dp"
            app:layout_constraintTop_toBottomOf="@id/cvProfilePhoto">

            <TextView
                android:id="@+id/tvNameTitle"
                style="@style/AppTheme.Text.Paragraph3.Teflon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/screen_edit_profile_parameter_name_title"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/etName"
                style="@style/AppTheme.Text.Paragraph4.Teflon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_5dp"
                android:background="@drawable/bg_transparent_content_borders_2dp_corner_10dp"
                android:inputType="textPersonName"
                android:paddingHorizontal="@dimen/size_10dp"
                android:paddingVertical="@dimen/size_10dp"
                android:transitionName="profile.name"
                app:layout_constraintTop_toBottomOf="@id/tvNameTitle" />

            <TextView
                android:id="@+id/tvLastNameTitle"
                style="@style/AppTheme.Text.Paragraph3.Teflon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_10dp"
                android:text="@string/screen_edit_profile_parameter_lastname_title"
                app:layout_constraintTop_toBottomOf="@id/etName" />

            <EditText
                android:id="@+id/etLastName"
                style="@style/AppTheme.Text.Paragraph4.Teflon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_5dp"
                android:background="@drawable/bg_transparent_content_borders_2dp_corner_10dp"
                android:inputType="textPersonName"
                android:paddingHorizontal="@dimen/size_10dp"
                android:paddingVertical="@dimen/size_10dp"
                android:transitionName="profile.lastname"
                app:layout_constraintTop_toBottomOf="@id/tvLastNameTitle"
                tools:layout_editor_absoluteX="20dp" />

            <TextView
                android:id="@+id/tvEmailTitle"
                style="@style/AppTheme.Text.Paragraph3.Teflon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_10dp"
                android:text="@string/screen_edit_profile_parameter_email_title"
                app:layout_constraintTop_toBottomOf="@id/etLastName" />

            <EditText
                android:id="@+id/etEmail"
                style="@style/AppTheme.Text.Paragraph4.Teflon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_5dp"
                android:background="@drawable/bg_transparent_content_borders_2dp_corner_10dp"
                android:inputType="textEmailAddress"
                android:paddingHorizontal="@dimen/size_10dp"
                android:paddingVertical="@dimen/size_10dp"
                android:transitionName="profile.email"
                app:layout_constraintTop_toBottomOf="@id/tvEmailTitle" />

            <TextView
                android:id="@+id/tvPhoneTitle"
                style="@style/AppTheme.Text.Paragraph3.Teflon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_10dp"
                android:text="@string/screen_edit_profile_parameter_phone_title"
                app:layout_constraintTop_toBottomOf="@id/etEmail" />

            <EditText
                android:id="@+id/etPhone"
                style="@style/AppTheme.Text.Paragraph4.Teflon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_5dp"
                android:background="@drawable/bg_transparent_content_borders_2dp_corner_10dp"
                android:inputType="number"
                android:paddingHorizontal="@dimen/size_10dp"
                android:paddingVertical="@dimen/size_10dp"
                android:transitionName="profile.phone"
                app:layout_constraintTop_toBottomOf="@id/tvPhoneTitle" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_40dp"
            app:layout_constraintBottom_toBottomOf="@id/btnUpdate"
            app:layout_constraintTop_toBottomOf="@id/clContent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnUpdate"
            style="@style/AppTheme.Button.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/size_24dp"
            android:layout_marginBottom="@dimen/size_24dp"
            android:text="@string/screen_edit_profile_btn_update_title"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>